--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
         <activity android:name=".RegisterActivity" >
         </activity>
-
+        <activity android:name=".BookContent"></activity>
         <activity android:name=".ProfileActivity"></activity>
     </application>
 
